--- a/app/src/main/res/layout/activity_main_alumno_ajustes.xml
+++ b/app/src/main/res/layout/activity_main_alumno_ajustes.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/fondo">
 
     <ImageView
-        android:id="@+id/imageView26"
+        android:id="@+id/btn_back_maa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -40,7 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.086"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView26" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_back_maa" />
 
     <TextView
         android:id="@+id/txtv_Alumnos"
