--- a/app/src/main/res/layout/activity_main_maestro_ajustes.xml
+++ b/app/src/main/res/layout/activity_main_maestro_ajustes.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/fondo">
 
     <ImageView
-        android:id="@+id/imageView12"
+        android:id="@+id/btn_backmma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -39,14 +39,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.086"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView12" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_backmma" />
 
     <TextView
         android:id="@+id/txtv_Alumnos2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:text="/Ajustes"
+        android:layout_marginStart="64dp"
+        android:text="/ Ajustes"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textv_maestroA2"
@@ -69,7 +69,7 @@
         style="@style/btn_sinrelleno"
         android:layout_width="270dp"
         android:layout_height="52dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="52dp"
         android:text="Ayuda"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.588"
@@ -81,11 +81,34 @@
         style="@style/btn_sinrelleno"
         android:layout_width="270dp"
         android:layout_height="52dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="52dp"
         android:text="Contacto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.588"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_ayuda" />
+
+    <Button
+        android:id="@+id/btn_cambiarimagen"
+        style="@style/btn_sinrelleno"
+        android:layout_width="270dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="52dp"
+        android:text="Cambiar Imagen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.588"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_contacto" />
+
+    <ImageView
+        android:id="@+id/img_master"
+        android:layout_width="82dp"
+        android:layout_height="86dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.534"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_cambiarimagen"
+        app:srcCompat="@android:drawable/ic_menu_help" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
