--- a/app/src/main/res/layout/activity_main_maestro_alumnos.xml
+++ b/app/src/main/res/layout/activity_main_maestro_alumnos.xml
@@ -8,7 +8,7 @@
     tools:context=".Profesor.activity_main_maestro_alumnos">
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/btn_backmmalum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -40,7 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.085"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_backmmalum" />
 
     <TextView
         android:id="@+id/txtv_Alumnos"
@@ -60,6 +60,7 @@
         android:layout_marginTop="128dp"
         android:layout_marginEnd="8dp"
         android:text="@string/txtv_AñadirAlumno"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/imageView8"
@@ -84,8 +85,10 @@
         android:layout_width="356dp"
         android:layout_height="505dp"
         android:layout_marginStart="29dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="29dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtv_AñadirAlumno"
         tools:listitem="@layout/adapter_activity_maestro_alumnos" />
