--- a/app/src/main/res/layout/activity_main_maestro_creacionmemorama.xml
+++ b/app/src/main/res/layout/activity_main_maestro_creacionmemorama.xml
@@ -8,7 +8,20 @@
     tools:context=".Profesor.activity_main_maestro_creacionmemorama">
 
     <ImageView
-        android:id="@+id/imageView14"
+        android:id="@+id/imageView16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="136dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView28"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView15"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@android:drawable/ic_input_add" />
+
+    <ImageView
+        android:id="@+id/btn_backcreacionmemo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -40,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.085"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView14" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_backcreacionmemo" />
 
     <TextView
         android:id="@+id/txtv_actividadM"
@@ -52,41 +65,54 @@
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtv_maestroM" />
-
+    <!---Your comment
     <TextView
         android:id="@+id/textv_añadirNP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="176dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="188dp"
+        android:layout_marginTop="180dp"
         android:text="@string/txtv_añadirNP"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/imageView16"
-        app:layout_constraintHorizontal_bias="0.989"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    -->
+
 
     <ImageView
-        android:id="@+id/imageView16"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="100dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.897"
+        android:id="@+id/imageView28"
+        android:layout_width="155dp"
+        android:layout_height="239dp"
+        android:layout_marginStart="128dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView15"
-        app:srcCompat="@drawable/add_blue_ehl" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.556"
+        app:srcCompat="@drawable/ic_launcher_background" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvPadre"
-        android:layout_width="376dp"
-        android:layout_height="487dp"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
+    <Button
+        android:id="@+id/btnAbrirCamara"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:text="Abrir Camara"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textv_añadirNP"
-        tools:listitem="@layout/adapter_activity_maestro_trabajos_crearmemorama" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView28" />
+
+    <Button
+        android:id="@+id/btnAbrirGaleria"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
+        android:text="Abrir Galeria"
+        app:layout_constraintEnd_toEndOf="@+id/btnAbrirCamara"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="@+id/btnAbrirCamara"
+        app:layout_constraintTop_toBottomOf="@+id/btnAbrirCamara" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
