--- a/app/src/main/res/layout/adapter_activity_maestro_alumnos.xml
+++ b/app/src/main/res/layout/adapter_activity_maestro_alumnos.xml
@@ -10,6 +10,7 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        app:cardBackgroundColor="#2EFFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
