--- a/app/src/main/res/layout/adapter_activity_maestro_trabajos_edicioncquiz.xml
+++ b/app/src/main/res/layout/adapter_activity_maestro_trabajos_edicioncquiz.xml
@@ -10,7 +10,7 @@
         android:id="@+id/cardView2"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#2EFFFFFF"
+        app:cardBackgroundColor="#2EFFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
