--- a/app/src/main/res/layout/activity_main_maestro_ajustes.xml
+++ b/app/src/main/res/layout/activity_main_maestro_ajustes.xml
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtv_Alumnos2" />
 
     <Button
-        android:id="@+id/btn_ayuda"
+        android:id="@+id/btn_ayudaalum"
         style="@style/btn_sinrelleno"
         android:layout_width="270dp"
         android:layout_height="52dp"
@@ -86,7 +86,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.588"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_ayuda" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_ayudaalum" />
 
     <Button
         android:id="@+id/btn_cambiarimagen"
