--- a/app/src/main/res/layout/adapter_activity_controlparental_grupos.xml
+++ b/app/src/main/res/layout/adapter_activity_controlparental_grupos.xml
@@ -22,19 +22,27 @@
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="252dp"
                 android:text="Promedio:"
                 android:textColor="#FFFFFF"
-                app:layout_constraintStart_toEndOf="@+id/txtv_Grupo"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/txt_primario" />
 
             <TextView
-                android:id="@+id/txtv_Grupo"
-                android:layout_width="117dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="84dp"
-                android:layout_marginTop="12dp"
+                android:id="@+id/txt_primario"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:textColor="#FFFFFF"
+                app:layout_constraintStart_toEndOf="@+id/textView"
+                app:layout_constraintTop_toTopOf="@+id/textView" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="47dp"
+                android:layout_height="22dp"
+                android:layout_marginStart="56dp"
+                android:layout_marginTop="16dp"
                 android:paddingBottom="5sp"
                 android:text="Grupo:"
                 android:textColor="#FFFFFF"
@@ -43,15 +51,13 @@
                 tools:text="Grupo:" />
 
             <TextView
-                android:id="@+id/txt_grade"
+                android:id="@+id/txt_secundario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="96dp"
-                android:layout_marginTop="16dp"
-                android:text="N/A"
+                android:layout_marginStart="22dp"
                 android:textColor="#FFFFFF"
-                app:layout_constraintStart_toEndOf="@+id/txtv_Grupo"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toEndOf="@+id/textView3"
+                app:layout_constraintTop_toTopOf="@+id/textView3" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
