--- a/app/src/main/res/layout/adapter_activity_controlparental_grupos_calificaciones.xml
+++ b/app/src/main/res/layout/adapter_activity_controlparental_grupos_calificaciones.xml
@@ -17,7 +17,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/txt_Activityalumno"
+                android:id="@+id/txt_primario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="84dp"
@@ -28,14 +28,14 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/txt_calificacion"
+                android:id="@+id/txt_secundario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="88dp"
                 android:layout_marginTop="12dp"
                 android:text="N/A"
                 android:textColor="#FFFFFF"
-                app:layout_constraintStart_toEndOf="@+id/txt_Activityalumno"
+                app:layout_constraintStart_toEndOf="@+id/txt_primario"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
