--- a/app/src/main/res/layout/activity_main_control_parental__nivelde_conocimiento.xml
+++ b/app/src/main/res/layout/activity_main_control_parental__nivelde_conocimiento.xml
@@ -112,7 +112,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textNombre3"
+                android:id="@+id/textNivel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="28dp"
