--- a/app/src/main/res/layout/adapter_activity_maestro_alumnos_asistencia.xml
+++ b/app/src/main/res/layout/adapter_activity_maestro_alumnos_asistencia.xml
@@ -29,7 +29,7 @@
                 app:srcCompat="@android:drawable/arrow_down_float" />
 
             <TextView
-                android:id="@+id/textGrupo"
+                android:id="@+id/txt_primario"
                 android:layout_width="117dp"
                 android:layout_height="25dp"
                 android:layout_marginStart="8dp"
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="88dp"
                 android:layout_marginTop="8dp"
-                app:layout_constraintStart_toEndOf="@+id/textGrupo"
+                app:layout_constraintStart_toEndOf="@+id/txt_primario"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
