--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,7 @@
                 android:background="@drawable/edit_text"
                 android:ems="10"
                 android:inputType="textPersonName"
+                android:paddingLeft="10dp"
                 android:textColorHint="#00FFFFFF"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.271"
@@ -78,6 +79,7 @@
                 android:background="@drawable/edit_text"
                 android:ems="10"
                 android:inputType="textPassword"
+                android:paddingLeft="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.254"
                 app:layout_constraintStart_toStartOf="parent"
