--- a/app/src/main/res/layout/activity_main_control_parental.xml
+++ b/app/src/main/res/layout/activity_main_control_parental.xml
@@ -31,14 +31,13 @@
         android:id="@+id/txtv_Maestro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="12dp"
         android:fontFamily="sans-serif"
         android:text="@string/control_parental"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_backcp" />
 
