--- a/app/src/main/res/layout/activity_main_control_parental__nivelde_conocimiento.xml
+++ b/app/src/main/res/layout/activity_main_control_parental__nivelde_conocimiento.xml
@@ -56,13 +56,10 @@
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="352dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="28dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="28dp"
-        android:layout_marginEnd="28dp"
         android:background="#2EFFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtv_Actividades">
 
@@ -75,10 +72,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:text="Nombre Alumno"
+                android:layout_marginTop="5dp"
+                android:text="Cargando..."
                 android:textColor="@color/colorPrimary"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -117,7 +114,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="28dp"
                 android:layout_marginTop="16dp"
-                android:text="Avanzado"
+                android:text="Cargando..."
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/textNombre2"
