--- a/app/src/main/res/layout/activity_main_maestro_creacioncquiz.xml
+++ b/app/src/main/res/layout/activity_main_maestro_creacioncquiz.xml
@@ -9,12 +9,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPadre"
-        android:layout_width="382dp"
-        android:layout_height="482dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="371dp"
+        android:layout_height="401dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtv_añadirNPR"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
         tools:listitem="@layout/adapter_activity_maestro_trabajos_edicioncquiz" />
 
     <ImageView
@@ -67,13 +67,13 @@
         android:id="@+id/txtv_añadirNPR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="176dp"
+        android:layout_marginTop="164dp"
         android:layout_marginEnd="8dp"
         android:text="@string/txtv_añadirNPR"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/imageView19"
-        app:layout_constraintHorizontal_bias="0.989"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -81,10 +81,46 @@
         android:id="@+id/imageView19"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="88dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.897"
+        app:layout_constraintHorizontal_bias="0.905"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView18"
         app:srcCompat="@drawable/add_blue_ehl" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:text="Ingresar nombre del CQuiz:"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtv_añadirNPR" />
+
+    <Button
+        android:id="@+id/button3"
+        style="@style/btn_sinrellenomenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="36dp"
+        android:text="Aceptar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvPadre" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
+        android:layout_width="193dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#00BCD4"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/txtv_añadirNPR" />
 </androidx.constraintlayout.widget.ConstraintLayout>
