--- a/app/src/main/res/layout/adapter_activity_controlparental_grupos.xml
+++ b/app/src/main/res/layout/adapter_activity_controlparental_grupos.xml
@@ -7,8 +7,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView4"
-        android:layout_width="412dp"
-        android:layout_height="49dp"
+        android:layout_width="410dp"
+        android:layout_height="62dp"
         app:cardBackgroundColor="#2EFFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,17 +22,19 @@
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="252dp"
+                android:layout_marginStart="44dp"
+                android:layout_marginTop="4dp"
                 android:text="Promedio:"
                 android:textColor="#FFFFFF"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/txt_primario" />
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             <TextView
                 android:id="@+id/txt_primario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:autoSizeTextType="uniform"
                 android:textColor="#FFFFFF"
                 app:layout_constraintStart_toEndOf="@+id/textView"
                 app:layout_constraintTop_toTopOf="@+id/textView" />
@@ -41,8 +43,8 @@
                 android:id="@+id/textView"
                 android:layout_width="47dp"
                 android:layout_height="22dp"
-                android:layout_marginStart="56dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="44dp"
+                android:layout_marginTop="8dp"
                 android:paddingBottom="5sp"
                 android:text="Grupo:"
                 android:textColor="#FFFFFF"
